Fix collapsing table borders
Closes #50

--- a/src/scss/mixins/_tables.scss
+++ b/src/scss/mixins/_tables.scss
@@ -7,6 +7,7 @@ $tables-breakpoint: $md !default; // Breakpoint for responsive tables
 // Simple table
 @mixin simple-table($border-color: $grey) {
     border-bottom: 1px solid $border-color;
+    border-collapse: collapse;
 
     tr {
         border-top: 1px solid $border-color;
@@ -16,6 +17,7 @@ $tables-breakpoint: $md !default; // Breakpoint for responsive tables
 // Striped table
 @mixin striped-table($border-color: $grey, $odd-color: $lite-grey, $even-color: $silver, $head-color: $silver, $foot-color: $head-color) {
     border: 1px solid $border-color;
+    border-collapse: collapse;
     border-top: 0 none;
 
     thead {
